# knowledge-master

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  STABILITY.md  docker-compose.yml  mcp-registry.json  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
.kiro/agents/: knowledge-agent.json
docs/: FAQ.md  devto-article.md
docs/integrations/: antigravity.md  claude-desktop.md  cursor.md  docker.md  github-copilot.md  kiro.md
docs/reference/: cli.md
knowledge_master/: __main__.py  api.py  chunking.py  cli.py  connectors.py  embeddings.py  intelligence.py  rerank.py  server.py  static_analysis.py  store.py  ts_parsers.py  watcher.py  web.py
knowledge_master/parsers/: git_repo.py
src/: chunking.py  cli.py  embeddings.py  server.py  store.py  watcher.py  web.py
src/knowledge_master.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/parsers/: git_repo.py  markdown.py
tests/: test_api.py  test_chunking.py  test_cli.py  test_connectors.py  test_dedup.py  test_intelligence.py  test_migrations.py  test_ownership.py  test_reranker.py  test_safe_to_change.py  test_static_analysis.py  test_ts_parsers.py  test_web.py
tests/integration/: test_full_flow.py
